Fixed Horizontal Scroll Bar

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ li {
     display: flex;
     align-items: center; 
     justify-content: center;
+    max-width: 100%;
 }
 
 .content {
